tenant-isolation: hardening pass to fail-closed binding
HMAC-signed tenant claims verified inside PostgreSQL before RLS
trusts them, tenant-before-transaction enforcement, database-owned
UUIDv7 keys, system-ops credential separation, isolation modes,
pool validation, and two Codex-found RLS defects fixed fail-closed.
Authorization boundary and audit fixes ride the same pass.